--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,3 +3,33 @@
 .jspsych-display-element {
   background-color: #ffffff;
 }
+
+.study-problem {
+  .jspsych-survey-html-form-preamble {
+    font-size: 100px;
+  }
+}
+
+.study-feedback {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+
+  canvas {
+    height: 50%;
+  }
+
+  .feedback-message {
+    display: flex;
+    justify-content: center;
+  }
+
+  .correct-equation {
+    width: 100%;
+    height: 50%;
+    font-size: 100px;
+  }
+}
