Style/behavior adjustments round 1:
- Inline answer to equation
- Show correct answer in blue
- Remove meme intro text

Dev improvements:
- Install/run eslint

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,9 +5,16 @@
 }
 
 .study-problem {
-  .jspsych-survey-html-form-preamble {
-    font-size: 100px;
-  }
+  font-size: 100px;
+}
+
+#problem-answer-box {
+  font-size: 100px;
+  width: 15%;
+}
+
+.correct-response {
+  color: blue;
 }
 
 .study-feedback {
