--- a/styles/main.scss
+++ b/styles/main.scss
@@ -27,7 +27,7 @@
 
     .feedback-images {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       justify-content: space-between;
       width: 100%;
     }
@@ -40,12 +40,30 @@
 
     .feedback-message {
       display: flex;
+      flex-direction: column;
       align-items: center;
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
       height: 15em;
       max-width: 25%;
+      font-weight: bold;
+
+      &.correct {
+        color: green;
+      }
+
+      &.incorrect {
+        color: red;
+      }
+
+      p {
+        margin: 0;
+
+        &:first-child {
+          margin-top: 3em;
+        }
+      }
     }
 
     .correct-equation {
