--- a/styles/main.scss
+++ b/styles/main.scss
@@ -27,9 +27,13 @@
 
     .feedback-images {
       display: flex;
-      align-items: flex-start;
-      justify-content: space-between;
+      justify-content: center;
       width: 100%;
+    }
+
+    .feedback-icon {
+      width: 55px;
+      height: 50px;
     }
 
     .feedback-answer {
@@ -41,28 +45,16 @@
     .feedback-message {
       display: flex;
       flex-direction: column;
-      align-items: center;
+      justify-content: center;
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
       height: 15em;
-      max-width: 25%;
+      width: 50%;
       font-weight: bold;
-
-      &.correct {
-        color: green;
-      }
-
-      &.incorrect {
-        color: red;
-      }
 
       p {
         margin: 0;
-
-        &:first-child {
-          margin-top: 3em;
-        }
       }
     }
 
