--- a/styles/main.scss
+++ b/styles/main.scss
@@ -19,16 +19,20 @@
 
 .study-feedback {
   width: 100%;
+  height: 100%;
 
   > form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
+
 
     .feedback-images {
       display: flex;
       justify-content: center;
       width: 100%;
+      height: 33%;
     }
 
     .feedback-icon {
@@ -36,10 +40,15 @@
       height: 50px;
     }
 
+    #feedback-buttons {
+      display: flex;
+      align-items: center;
+      height: 34%;
+    }
+
     .feedback-answer {
       width: 100%;
-      height: 50%;
-      margin-top: 10em;
+      height: 33%;
     }
 
     .feedback-message {
@@ -49,7 +58,6 @@
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
-      height: 15em;
       width: 50%;
       font-weight: bold;
 
