--- a/styles/main.scss
+++ b/styles/main.scss
@@ -47,6 +47,9 @@
     }
 
     .feedback-answer {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
       width: 100%;
       height: 33%;
     }
