Better idea to implement box, use disabled input and style

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,10 +11,12 @@
 #problem-answer-box {
   font-size: 100px;
   width: 15%;
-}
+  text-align: center;
 
-.user-response {
-  color: gray;
+  &[disabled] {
+    background-color: white;
+    border: 1px solid black;
+  }
 }
 
 .correct-response {
